--- a/notebooks/sequestration_split.ipynb
+++ b/notebooks/sequestration_split.ipynb
@@ -21,9 +21,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "submission = \"packages_midrc-ricord-2021-10-26\"\n",
-    "submission_path = Path(\"/Users/andrewprokhorenkov/CTDS/projects/midrc/midrc_indexing_scripts\")\n",
+    "# submission = \"packages_RSNA_20211117\" # done\n",
+    "# submission = \"packages_RSNA_20211214\" # partially done, indexed\n",
+    "# submission = \"packages_RSNA_20220105\" # partially done, indexed\n",
+    "# submission = \"packages_RSNA_20220114\" # partially done, indexed\n",
+    "# submission = \"packages_RSNA_20220124\" # partially done, indexed\n",
+    "# submission = \"packages_RSNA_20220211\" # partially done, indexed\n",
+    "submission = \"packages_RSNA_20220214\" # partially done, indexed\n",
+    "# submission = \"packages_midrc-ricord-2021-08-20\" # todo\n",
+    "# submission = \"packages_midrc-ricord-2021-09-02\" # done\n",
+    "# submission = \"packages_midrc-ricord-2021-09-22\" # done\n",
+    "# submission = \"packages_midrc-ricord-2021-10-06\" # done\n",
+    "# submission = \"packages_midrc-ricord-2021-10-26\" # done\n",
+    "submission_path = Path(\"/Users/andrewprokhorenkov/CTDS/projects/midrc/midrc_indexing_scripts/packages_rsna\")\n",
     "submission_path = submission_path / submission\n",
+    "package_files = submission_path / \"packages\"\n",
     "sequestration_master_file_path = \"/Users/andrewprokhorenkov/CTDS/projects/midrc/midrc_indexing_scripts/sequestration/master_sequestration_locations_10162_2022-03-18.tsv\""
    ]
   },
@@ -47,27 +59,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "package_files = submission_path / \"packages\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def process_package():\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "open_packages = []\n",
     "seq_packages = []\n",
+    "missing_packages = []\n",
+    "\n",
     "for package_filepath in package_files.iterdir():\n",
     "    with open(package_filepath) as package_file:\n",
     "        reader = csv.DictReader(package_file, delimiter=\"\\t\")\n",
@@ -76,18 +71,6 @@
     "\n",
     "            file_name = item[\"file_name\"]\n",
     "            case_id = file_name.split(\"/\")[0]\n",
-    "            dataset = seq_master[case_id]\n",
-    "\n",
-    "            if dataset == \"Open\":\n",
-    "                bucket = \"open-data-midrc\"\n",
-    "                authz = json.dumps([\"/programs/Open/projects/R1\"])\n",
-    "            elif dataset == \"Seq\":\n",
-    "                bucket = \"sequestered-data-midrc\"\n",
-    "                authz = json.dumps([\"/programs/SEQ_Open/projects/R3\"])\n",
-    "            else:\n",
-    "                print(\"!\")\n",
-    "            item[\"authz\"] = authz\n",
-    "            item[\"url\"] = f\"s3://{bucket}/{item['url']}\"\n",
     "\n",
     "            package_contents = json.loads(item[\"package_contents\"].replace(\"'\", \"\\\"\"))\n",
     "            for p in package_contents:\n",
@@ -95,12 +78,30 @@
     "            \n",
     "            item[\"package_contents\"] = json.dumps(package_contents)\n",
     "\n",
+    "            # if case_id not in seq_master:\n",
+    "            #     continue\n",
+    "\n",
+    "            dataset = seq_master.get(case_id, None)\n",
+    "\n",
+    "            if dataset == \"Open\":\n",
+    "                bucket = \"s3://open-data-midrc/\"\n",
+    "                authz = json.dumps([\"/programs/Open/projects/R1\"])\n",
+    "            elif dataset == \"Seq\":\n",
+    "                bucket = \"s3://sequestered-data-midrc/\"\n",
+    "                authz = json.dumps([\"/programs/SEQ_Open/projects/R3\"])\n",
+    "            else:\n",
+    "                authz = \"\"\n",
+    "                bucket = \"\"\n",
+    "\n",
+    "            item[\"authz\"] = authz\n",
+    "            item[\"url\"] = f\"{bucket}{item['url']}\"\n",
+    "\n",
     "            if dataset == \"Open\":\n",
     "                open_packages.append(item)\n",
     "            elif dataset == \"Seq\":\n",
     "                seq_packages.append(item)\n",
     "            else:\n",
-    "                pass"
+    "                missing_packages.append(item)"
    ]
   },
   {
@@ -109,39 +110,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(submission_path / f\"packages_open_{submission.split('_')[1]}.tsv\", \"w\") as f:\n",
-    "    fieldnames = [\n",
-    "        \"record_type\",\n",
-    "        \"guid\",\n",
-    "        \"md5\",\n",
-    "        \"size\",\n",
-    "        \"authz\",\n",
-    "        \"url\",\n",
-    "        \"file_name\",\n",
-    "        \"package_contents\",\n",
-    "    ]\n",
-    "    writer = csv.DictWriter(f, delimiter=\"\\t\", fieldnames=fieldnames)\n",
-    "    writer.writeheader()\n",
+    "datasets = [\n",
+    "    (f\"packages_open_{submission.removeprefix('packages_')}.tsv\", open_packages),\n",
+    "    (f\"packages_seq_{submission.removeprefix('packages_')}.tsv\", seq_packages),\n",
+    "    (f\"packages_missing_{submission.removeprefix('packages_')}.tsv\", missing_packages),\n",
+    "]\n",
     "\n",
-    "    for item in open_packages:\n",
-    "        writer.writerow(item)\n",
+    "fieldnames = [\n",
+    "    \"record_type\",\n",
+    "    \"guid\",\n",
+    "    \"md5\",\n",
+    "    \"size\",\n",
+    "    \"authz\",\n",
+    "    \"url\",\n",
+    "    \"file_name\",\n",
+    "    \"package_contents\",\n",
+    "]\n",
     "\n",
-    "with open(submission_path / f\"packages_seq_{submission.split('_')[1]}.tsv\", \"w\") as f:\n",
-    "    fieldnames = [\n",
-    "        \"record_type\",\n",
-    "        \"guid\",\n",
-    "        \"md5\",\n",
-    "        \"size\",\n",
-    "        \"authz\",\n",
-    "        \"url\",\n",
-    "        \"file_name\",\n",
-    "        \"package_contents\",\n",
-    "    ]\n",
-    "    writer = csv.DictWriter(f, delimiter=\"\\t\", fieldnames=fieldnames)\n",
-    "    writer.writeheader()\n",
+    "for filename, dataset in datasets:\n",
+    "    with open(\n",
+    "        submission_path / filename,\n",
+    "        \"w\",\n",
+    "    ) as f:\n",
+    "        writer = csv.DictWriter(f, delimiter=\"\\t\", fieldnames=fieldnames)\n",
+    "        writer.writeheader()\n",
     "\n",
-    "    for item in seq_packages:\n",
-    "        writer.writerow(item)"
+    "        for item in dataset:\n",
+    "            writer.writerow(item)"
    ]
   }
  ],
