feat: update to package processing notebooks

--- a/notebooks/process_rsna.ipynb
+++ b/notebooks/process_rsna.ipynb
@@ -23,17 +23,24 @@
    "source": [
     "SUBMISSIONS = [\n",
     "    # \"midrc-ricord-2021-08-20\",\n",
-    "    \"midrc-ricord-2021-09-02\",\n",
-    "    \"midrc-ricord-2021-09-22\",\n",
-    "    \"midrc-ricord-2021-10-06\",\n",
-    "    \"midrc-ricord-2021-10-26\",\n",
-    "    \"RSNA_20211117\",\n",
-    "    \"RSNA_20211214\",\n",
-    "    \"RSNA_20220105\",\n",
-    "    \"RSNA_20220114\",\n",
-    "    \"RSNA_20220124\",\n",
-    "    \"RSNA_20220211\",\n",
-    "    \"RSNA_20220214\",\n",
+    "    # \"midrc-ricord-2021-09-02\",\n",
+    "    # \"midrc-ricord-2021-09-22\",\n",
+    "    # \"midrc-ricord-2021-10-06\",\n",
+    "    # \"midrc-ricord-2021-10-26\",\n",
+    "    # \"RSNA_20211117\",\n",
+    "    # \"RSNA_20211214\",\n",
+    "    # \"RSNA_20220105\",\n",
+    "    # \"RSNA_20220114\",\n",
+    "    # \"RSNA_20220124\",\n",
+    "    # \"RSNA_20220211\",\n",
+    "    # \"RSNA_20220214\",\n",
+    "\n",
+    "    # \"RSNA_20220228\",\n",
+    "    # \"RSNA_20220308\",\n",
+    "    # \"RSNA_20220314\",\n",
+    "    # \"RSNA_20220329\",  # no instances\n",
+    "    # \"RSNA_20220427\",  # no instances\n",
+    "    # \"RSNA_20220520\",  # no instances\n",
     "]"
    ]
   },
@@ -46,10 +53,10 @@
     "def process_submission(SUBMISSION):\n",
     "    # useful paths for data manipulation\n",
     "    print(SUBMISSION)\n",
-    "    PACKAGES_PATH = Path(f\"/Users/andrewprokhorenkov/CTDS/projects/midrc/midrc_indexing_scripts/packages/packages_{SUBMISSION}\")\n",
+    "    PACKAGES_PATH = Path(f\"/Users/andrewprokhorenkov/CTDS/projects/midrc/indexing-data/packages_rsna/packages_{SUBMISSION}\")\n",
     "    PACKAGES_PATH.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "    RSNA_PATH = Path(\"/Users/andrewprokhorenkov/CTDS/projects/midrc/s3-data/raw/rsna\")\n",
+    "    RSNA_PATH = Path(\"/Users/andrewprokhorenkov/CTDS/projects/midrc/ssot-s3/replicated-data-rsna\")\n",
     "    SUBMISSION_PATH = RSNA_PATH / SUBMISSION\n",
     "\n",
     "    # get all the necessary files\n",
@@ -87,6 +94,7 @@
     "    series = list(map(lambda v: pd.read_csv(v, sep=\"\\t\"), series_files))\n",
     "\n",
     "    rename_columns_series = {\n",
+    "        \"imaging_studies.submitter_id\": \"study_id\",\n",
     "        \"mr_exams.submitter_id\": \"study_id\",\n",
     "        \"ct_scans.submitter_id\": \"study_id\",\n",
     "        \"radiography_exams.submitter_id\": \"study_id\",\n",
@@ -127,15 +135,22 @@
     "\n",
     "    all_instances = all_instances[[\"instance_id\", \"series_id\", \"case_id\", \"file_name\", \"file_size\", \"md5sum\", \"storage_urls\"]]\n",
     "\n",
+    "    # fix for RSNA_20220314\n",
+    "    if SUBMISSION == \"RSNA_20220314\":\n",
+    "        all_instances[\"storage_urls\"] = all_instances[\"storage_urls\"].apply(lambda v: v.replace(\"RSNA_20220307\", \"RSNA_20220314\"))\n",
+    "\n",
     "    merged = image_manifest.merge(all_instances).merge(all_series).merge(studies)\n",
     "    merged[\"file_name\"] = merged[\"instance_id\"].apply(lambda v: f\"{v}.dcm\")\n",
     "    merged = merged[[\"file_name\", \"file_size\", \"md5sum\", \"storage_urls\", \"case_id\", \"study_id\", \"series_id\"]]\n",
     "\n",
-    "    print(f\"{image_manifest.shape}\\n{merged.shape}\")\n",
+    "    print(f\"image manifest: {image_manifest.shape}\\nmerged manifest: {merged.shape}\\nall instances: {all_instances.shape}\")\n",
+    "    # print(f\"image manifest: {image_manifest.columns}\\nmerged manifest: {merged.columns}\\nall instances: {all_instances.columns}\")\n",
+    "    # print(all_instances.head())\n",
+    "    # print(image_manifest.head())\n",
     "\n",
     "    list_of_packages = []\n",
     "\n",
-    "    for i, row in merged.iterrows():\n",
+    "    for _, row in merged.iterrows():\n",
     "        case_id = row[\"case_id\"]\n",
     "        study_id = row[\"study_id\"]\n",
     "        series_id = row[\"series_id\"]\n",
@@ -175,11 +190,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "4788fb3d406e5627ce93ce2328ec2a20d72350bcb84a0da657cf44b605da6122"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.3 ('.venv': poetry)",
+   "display_name": "Python 3.10.4 64-bit ('main')",
    "language": "python",
    "name": "python3"
   },
@@ -193,9 +205,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.3"
+   "version": "3.10.4"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "868b6f95f8a89b92223df60118f35e6d1093d86a88199d026282c847e987351d"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
