--- a/notebooks/sequestration_split_rsna.ipynb
+++ b/notebooks/sequestration_split_rsna.ipynb
@@ -46,9 +46,9 @@
     "    # \"packages_midrc-ricord-2021-09-22\",\n",
     "    # \"packages_midrc-ricord-2021-10-06\",\n",
     "    # \"packages_midrc-ricord-2021-10-26\",\n",
-    "    # \"packages_RSNA_20220228\",\n",
-    "    # \"packages_RSNA_20220308\",\n",
-    "    # \"packages_RSNA_20220314\",\n",
+    "    \"packages_RSNA_20220228\",\n",
+    "    \"packages_RSNA_20220308\",\n",
+    "    \"packages_RSNA_20220314\",\n",
     "]\n",
     "\n",
     "submission_path = PosixPath(\n",
@@ -172,7 +172,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit ('main')",
+   "display_name": "Python 3.10.5 64-bit ('midrc-etl')",
    "language": "python",
    "name": "python3"
   },
@@ -186,12 +186,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "868b6f95f8a89b92223df60118f35e6d1093d86a88199d026282c847e987351d"
+    "hash": "ea16ea1e58fe2ee246f64da345d780c15cc646495260e4ce14409c0c689d3e2c"
    }
   }
  },
