--- a/notebooks/work_with_inventory.ipynb
+++ b/notebooks/work_with_inventory.ipynb
@@ -9,6 +9,7 @@
     "import json\n",
     "import csv\n",
     "import gzip\n",
+    "import re\n",
     "import sys\n",
     "from pathlib import Path"
    ]
@@ -19,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATH = Path(\"./inventory/external-data-midrc-replication/external-data-midrc-replication-inventory-configuration/\")\n",
+    "PATH = Path(\"/Users/andrewprokhorenkov/CTDS/projects/midrc/wd/inventory/external-data-midrc-replication/external-data-midrc-replication-inventory-configuration/\")\n",
     "PATH = PATH / \"2022-06-26T00-00Z\" / \"manifest.json\""
    ]
   },
@@ -43,12 +44,14 @@
     "\n",
     "for obj in manifest['files']:\n",
     "    print(obj)\n",
-    "    gzip_obj = f\"inventory/{obj['key']}\"\n",
+    "    gzip_obj = f\"/Users/andrewprokhorenkov/CTDS/projects/midrc/wd/inventory/{obj['key']}\"\n",
     "    buffer = gzip.open(gzip_obj, mode='rt')\n",
     "    reader = csv.reader(buffer)\n",
     "    for row in reader:\n",
+    "        # print(row)\n",
+    "        # break\n",
     "        filename = row[1]\n",
-    "        if filename[-4:] == \".tsv\":\n",
+    "        if filename[-4:] == \".dcm\":\n",
     "            tsvs.append(filename)"
    ]
   },
@@ -58,7 +61,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"./download.txt\", \"w\") as download:\n",
+    "submissions = []\n",
+    "debug_sub = []\n",
+    "\n",
+    "acr_submission = re.compile(r\".*?/([\\w\\d/-]*)/\")\n",
+    "rsna_submission = re.compile(r\".*?/([\\w\\d/-]*)/data\")\n",
+    "\n",
+    "for tsv in tsvs:\n",
+    "    if \"replicated-data-acr\" in tsv:\n",
+    "        match = acr_submission.match(tsv)\n",
+    "    elif \"replicated-data-rsna\" in tsv:\n",
+    "        match = rsna_submission.match(tsv)\n",
+    "    else:\n",
+    "        pass\n",
+    "        # print(\"That's bad...\")\n",
+    "\n",
+    "    debug_sub.append(match)\n",
+    "    if match:\n",
+    "        submission = match.group(1)\n",
+    "        if submission in submissions:\n",
+    "            continue\n",
+    "        submissions.append(submission)\n",
+    "    else:\n",
+    "        pass\n",
+    "        # print(tsv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for s in submissions:\n",
+    "    print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"/Users/andrewprokhorenkov/Downloads/listing_dicom_images.txt\", \"w\") as download:\n",
     "    for tsv in tsvs:\n",
     "        download.write(tsv)\n",
     "        download.write(\"\\n\")"
@@ -67,7 +112,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit ('main')",
+   "display_name": "Python 3.10.5 64-bit ('midrc-etl')",
    "language": "python",
    "name": "python3"
   },
@@ -81,12 +126,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "868b6f95f8a89b92223df60118f35e6d1093d86a88199d026282c847e987351d"
+    "hash": "ea16ea1e58fe2ee246f64da345d780c15cc646495260e4ce14409c0c689d3e2c"
    }
   }
  },
