feat: update to notebooks

--- a/notebooks/get_open_dicom.ipynb
+++ b/notebooks/get_open_dicom.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DICOM Submission up to `done_packages_acr/packages_ACR_20220107` for ACR\n",
+    "and `done_packages_rsna/packages_RSNA_20220214` for RSNA."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
