updated LOINC mapping notebooks with submission cell

--- a/LOINC_mapping/MIDRC_LOINC_mapping_workflow_ACR_RSNA.ipynb
+++ b/LOINC_mapping/MIDRC_LOINC_mapping_workflow_ACR_RSNA.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a6e62cee",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5aa56399",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "ee9ebba2",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
        " 'TCIA-RICORD']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "6d4dc32a",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "6dc097ad",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "a50e508a",
    "metadata": {},
    "outputs": [
@@ -278,7 +278,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "study_modality values in mapping table: ['mg', 'cr, dx', 'pt', '[blank]', 'us', 'mr', 'st', 'ct', 'nm']\n",
+      "study_modality values in mapping table: ['mr', 'mg', 'st', '[blank]', 'nm', 'cr, dx', 'ct', 'us', 'pt']\n",
       "Number of LOINC codes in mapping table: 74\n"
      ]
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "a63a878e",
    "metadata": {},
    "outputs": [
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "abf982ec",
    "metadata": {},
    "outputs": [
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "90796fbb",
    "metadata": {},
    "outputs": [
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "bec74a6f",
    "metadata": {},
    "outputs": [
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "4ba4f60e",
    "metadata": {},
    "outputs": [
@@ -763,7 +763,7 @@
      "output_type": "stream",
      "text": [
       "There are the following values of study_modality in the MIDRC imaging_study data: \n",
-      "['mg', 'cr, dx', 'xa', 'dr', 'us', 'mr', 'pr', 'ct', 'rf', 'ctpt']\n",
+      "['mr', 'mg', 'xa', 'cr, dx', 'dr', 'ct', 'pr', 'ctpt', 'rf', 'us']\n",
       "\n",
       "These modalities are in the study data but not in the mapping table: \n",
       "{'xa': 1, 'dr': 2, 'pr': 1, 'rf': 36, 'ctpt': 67}\n"
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "a01a5dc7",
    "metadata": {},
    "outputs": [
@@ -982,7 +982,7 @@
        "[95506 rows x 6 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "2092c572",
    "metadata": {},
    "outputs": [
@@ -1263,7 +1263,7 @@
        "[95506 rows x 11 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1277,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "14fbdb06",
    "metadata": {},
    "outputs": [
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "91137f15",
    "metadata": {},
    "outputs": [
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "3bcd92e7",
    "metadata": {},
    "outputs": [
@@ -1471,9 +1471,230 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a4bf47b8",
+   "metadata": {},
+   "source": [
+    "## Submit the data to staging\n",
+    "---\n",
+    "Use the Gen3SDK function `Gen3Submission.submit_file()` to update the LOINC properties for each of the newly mapped studies in `mdf`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "99f80f20",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/christopher/Documents/Notes/MIDRC/LOINC/expansion.py:1969: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df.rename(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Submitting ['imaging_study'] DataFrame with 35071 records.\n",
+      "\tChunk 1 (chunk size: 1000, submitted: 0 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 2 (chunk size: 1000, submitted: 1000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 3 (chunk size: 1000, submitted: 2000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 4 (chunk size: 1000, submitted: 3000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 5 (chunk size: 1000, submitted: 4000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 6 (chunk size: 1000, submitted: 5000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 7 (chunk size: 1000, submitted: 6000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 8 (chunk size: 1000, submitted: 7000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 9 (chunk size: 1000, submitted: 8000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 10 (chunk size: 1000, submitted: 9000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 11 (chunk size: 1000, submitted: 10000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 12 (chunk size: 1000, submitted: 11000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 13 (chunk size: 1000, submitted: 12000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 14 (chunk size: 1000, submitted: 13000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 15 (chunk size: 1000, submitted: 14000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 16 (chunk size: 1000, submitted: 15000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 17 (chunk size: 1000, submitted: 16000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 18 (chunk size: 1000, submitted: 17000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 19 (chunk size: 1000, submitted: 18000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 20 (chunk size: 1000, submitted: 19000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 21 (chunk size: 1000, submitted: 20000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 22 (chunk size: 1000, submitted: 21000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 23 (chunk size: 1000, submitted: 22000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 24 (chunk size: 1000, submitted: 23000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 25 (chunk size: 1000, submitted: 24000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 26 (chunk size: 1000, submitted: 25000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 27 (chunk size: 1000, submitted: 26000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 28 (chunk size: 1000, submitted: 27000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 29 (chunk size: 1000, submitted: 28000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 30 (chunk size: 1000, submitted: 29000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 31 (chunk size: 1000, submitted: 30000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 32 (chunk size: 1000, submitted: 31000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 33 (chunk size: 1000, submitted: 32000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 34 (chunk size: 1000, submitted: 33000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 35 (chunk size: 1000, submitted: 34000 of 35071)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 36 (chunk size: 1000, submitted: 35000 of 35071)\n",
+      "\t Succeeded: 71 entities.\n",
+      "Finished data submission.\n",
+      "Successful records: 35071\n",
+      "Failed invalid records: 0\n",
+      "Submitting ['imaging_study'] DataFrame with 2882 records.\n",
+      "\tChunk 1 (chunk size: 1000, submitted: 0 of 2882)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/christopher/Documents/Notes/MIDRC/LOINC/expansion.py:1969: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df.rename(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 2 (chunk size: 1000, submitted: 1000 of 2882)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 3 (chunk size: 1000, submitted: 2000 of 2882)\n",
+      "\t Succeeded: 882 entities.\n",
+      "Finished data submission.\n",
+      "Successful records: 2882\n",
+      "Failed invalid records: 0\n",
+      "Submitting ['imaging_study'] DataFrame with 26926 records.\n",
+      "\tChunk 1 (chunk size: 1000, submitted: 0 of 26926)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/christopher/Documents/Notes/MIDRC/LOINC/expansion.py:1969: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df.rename(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 2 (chunk size: 1000, submitted: 1000 of 26926)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 3 (chunk size: 1000, submitted: 2000 of 26926)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 4 (chunk size: 1000, submitted: 3000 of 26926)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 5 (chunk size: 1000, submitted: 4000 of 26926)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 6 (chunk size: 1000, submitted: 5000 of 26926)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 7 (chunk size: 1000, submitted: 6000 of 26926)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 8 (chunk size: 1000, submitted: 7000 of 26926)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 9 (chunk size: 1000, submitted: 8000 of 26926)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 10 (chunk size: 1000, submitted: 9000 of 26926)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 11 (chunk size: 1000, submitted: 10000 of 26926)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 12 (chunk size: 1000, submitted: 11000 of 26926)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 13 (chunk size: 1000, submitted: 12000 of 26926)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 14 (chunk size: 1000, submitted: 13000 of 26926)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 15 (chunk size: 1000, submitted: 14000 of 26926)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 16 (chunk size: 1000, submitted: 15000 of 26926)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 17 (chunk size: 1000, submitted: 16000 of 26926)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 18 (chunk size: 1000, submitted: 17000 of 26926)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 19 (chunk size: 1000, submitted: 18000 of 26926)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 20 (chunk size: 1000, submitted: 19000 of 26926)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 21 (chunk size: 1000, submitted: 20000 of 26926)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 22 (chunk size: 1000, submitted: 21000 of 26926)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 23 (chunk size: 1000, submitted: 22000 of 26926)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 24 (chunk size: 1000, submitted: 23000 of 26926)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 25 (chunk size: 1000, submitted: 24000 of 26926)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 26 (chunk size: 1000, submitted: 25000 of 26926)\n",
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 27 (chunk size: 1000, submitted: 26000 of 26926)\n",
+      "\t Succeeded: 926 entities.\n",
+      "Finished data submission.\n",
+      "Successful records: 26926\n",
+      "Failed invalid records: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Submit the derived data to staging\n",
+    "projects = list(set(mdf['project_id']))\n",
+    "data = {}\n",
+    "for pid in projects:\n",
+    "    print(\"Submitting data to project '{}'.\".format(pid))\n",
+    "    data[pid] = sexp.submit_df(df=mdf.loc[mdf[\"project_id\"]==pid],project_id=pid, chunk_size=1000)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "631c2f00",
+   "id": "9cc4462b",
    "metadata": {},
    "outputs": [],
    "source": []
