--- a/LOINC_mapping/MIDRC_LOINC_mapping_workflow_TCIA.ipynb
+++ b/LOINC_mapping/MIDRC_LOINC_mapping_workflow_TCIA.ipynb
@@ -278,7 +278,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "study_modality values in mapping table: ['st', 'mr', 'nm', 'us', 'mg', 'cr, dx', 'ct', '[blank]', 'pt']\n",
+      "study_modality values in mapping table: ['st', 'mr', 'cr, dx', 'mg', 'ct', '[blank]', 'pt', 'us', 'nm']\n",
       "Number of LOINC codes in mapping table: 74\n"
      ]
     }
@@ -771,10 +771,10 @@
      "output_type": "stream",
      "text": [
       "There are the following values of study_modality in the MIDRC imaging_study data: \n",
-      "['sr', 'ct,pt', 'mr', 'ct,nm', 'cr, dx', 'ct', 'ct,ot,pt']\n",
+      "['mr', 'cr, dx', 'ct', 'sr', 'ct,pt', 'ct,nm', 'ct,ot,pt']\n",
       "\n",
       "These modalities are in the study data but not in the mapping table: \n",
-      "{'sr': 2, 'ct,pt': 3, 'ct,nm': 5, 'ct,ot,pt': 2}\n"
+      "{'ct,pt': 3, 'ct,nm': 5, 'ct,ot,pt': 2, 'sr': 2}\n"
      ]
     }
    ],
@@ -1567,9 +1567,105 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "563e156c",
+   "metadata": {},
+   "source": [
+    "## Submit the data to staging\n",
+    "---\n",
+    "Use the Gen3SDK function `Gen3Submission.submit_file()` to update the LOINC properties for each of the newly mapped studies in `mdf`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "631c2f00",
+   "id": "7172515a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Submitting data to project 'TCIA-RICORD'.\n",
+      "Submitting ['imaging_study'] DataFrame with 1216 records.\n",
+      "\tChunk 1 (chunk size: 1000, submitted: 0 of 1216)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/christopher/Documents/Notes/MIDRC/LOINC/expansion.py:1969: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df.rename(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t Succeeded: 1000 entities.\n",
+      "\tChunk 2 (chunk size: 1000, submitted: 1000 of 1216)\n",
+      "\t Succeeded: 216 entities.\n",
+      "Finished data submission.\n",
+      "Successful records: 1216\n",
+      "Failed invalid records: 0\n",
+      "Submitting data to project 'TCIA-COVID-19-AR'.\n",
+      "Submitting ['imaging_study'] DataFrame with 252 records.\n",
+      "\tChunk 1 (chunk size: 1000, submitted: 0 of 252)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/christopher/Documents/Notes/MIDRC/LOINC/expansion.py:1969: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df.rename(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t Succeeded: 252 entities.\n",
+      "Finished data submission.\n",
+      "Successful records: 252\n",
+      "Failed invalid records: 0\n",
+      "Submitting data to project 'TCIA-COVID-19-NY-SBU'.\n",
+      "Submitting ['imaging_study'] DataFrame with 7335 records.\n",
+      "\tChunk 1 (chunk size: 1000, submitted: 0 of 7335)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/christopher/Documents/Notes/MIDRC/LOINC/expansion.py:1969: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df.rename(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Submit the derived data to staging\n",
+    "projects = list(set(mdf['project_id']))\n",
+    "data = {}\n",
+    "for pid in projects:\n",
+    "    print(\"Submitting data to project '{}'.\".format(pid))\n",
+    "    data[pid] = sexp.submit_df(df=mdf.loc[mdf[\"project_id\"]==pid],project_id=pid, chunk_size=1000)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f78a4a76",
    "metadata": {},
    "outputs": [],
    "source": []
